[tool.poetry]
name = "demo_app"
version = "0.1.0"
description = ""
authors = ["dhvcc <1337kwiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
